fixed scrollbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@
 .name_submit {
   font-size: 1em;
   background: #2980b9;
-  margin-left: 1em;
+  margin-left: 10px;
   border: none;
   padding: 0.2em;
 }
