--- a/client/src/components/Room.css
+++ b/client/src/components/Room.css
@@ -1,6 +1,17 @@
 * {
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px grey;
+  border-radius: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: gold;
+  border-radius: 5px;
+}
 .room {
   height: 100vh;
   display: flex;
@@ -15,6 +26,7 @@
   color: white;
   flex-grow: 2;
   margin: 0;
+  font-size: 3vw;
 }
 .room_chat_box {
   flex-grow: 10;
@@ -26,20 +38,18 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-  scrollbar-width: thin;
 }
 .room_chat_input {
   display: flex;
   align-items: stretch;
 }
 .message {
-  font-size: 1em;
+  font-size: 2vw;
   flex-grow: 10;
   padding: 0.5em;
-  font-size: 1em;
 }
 .send {
-  font-size: 1em;
+  font-size: 2vw;
   background: #2980b9;
   flex-grow: 2;
   border: none;
@@ -48,19 +58,18 @@
 .room_chat_message {
   display: inline;
   margin-bottom: 0.5em;
-  font-size: 1em;
-  padding: 0.4em;
+  padding: 1em;
 }
 
 .room_chat_message_sender {
-  font-size: 0.7em;
+  font-size: 1.4vw;
   color: crimson;
 }
 .room_chat_message_content {
-  font-size: 1.2em;
+  font-size: 2vw;
   margin-right: 5px;
 }
 .room_chat_message_time {
-  font-size: 0.4em;
+  font-size: 0.8vw;
   margin-right: 5px;
 }
